updating website, fixing twitter widget center align

--- a/css/CustomCarousel.css
+++ b/css/CustomCarousel.css
@@ -113,3 +113,16 @@ html {
   width: 100%;
 }
 */
+
+.twitterborder {
+    text-align: center;
+}
+.table{
+    display:table;
+    height: 100%;
+    width: 100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align: middle;
+}
